--- a/interim_report.tex
+++ b/interim_report.tex
@@ -12,6 +12,7 @@
 %% Useful packages
 \usepackage{amsmath}
 \usepackage{amssymb}
+\usepackage{enumitem}
 \usepackage{graphicx}
 \usepackage{subcaption}
 \usepackage{makecell}
@@ -68,9 +69,9 @@
 \input{ethical_issues/ethical_issues.tex}
 \input{datasets/datasets.tex}
 \input{experimental_setup/experimental_setup.tex}
-\input{evaluation/evaluation.tex}
-\input{conclusion/conclusion.tex}
+\input{results/results.tex}
 \input{future_work/future_work.tex}
+\input{conclusion/conclusion.tex}
 \input{appendix/appendix.tex}
 
 \bibliographystyle{vancouver}
